Update authorized views

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,10 +1,17 @@
 ﻿@using ClientWebApp.Components
+@using Microsoft.AspNetCore.Components.Authorization
+@inject NavigationManager navigationManager
+
 @inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    <AuthorizeView>
+        <Authorized>
+            <div class="sidebar">
+                <NavMenu />
+            </div>
+        </Authorized>
+    </AuthorizeView>
 
     <main>
         <div class="top-row px-4">
@@ -16,3 +23,17 @@
         </article>
     </main>
 </div>
+
+@code {
+    [CascadingParameter] protected Task<AuthenticationState> AuthState { get; set; }
+
+    protected async override Task OnInitializedAsync()
+    {
+        base.OnInitialized();
+        var user = (await AuthState).User;
+        if (!user.Identity.IsAuthenticated)
+        {
+            navigationManager.NavigateTo("/login");
+        }
+    }
+}
