--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -1,36 +1,31 @@
 ﻿@page "/login"
-<h3>Login</h3>
 
-@if (ShowAuthError)
-{
-    <div class="alert alert-danger" role="alert">
-        <p>@Error</p>
-    </div>
-}
-
-<EditForm Model="userAuth" OnValidSubmit="ExecuteLogin" class="card card-body bg-light mt-5">
-    <DataAnnotationsValidator />
-    <div class="form-group row">
-        <label for="username" class="col-md-2 col-form-label">Email:</label>
-        <div class="col-md-10">
-            <InputText id="username" class="form-control" @bind-Value="userAuth.Username" />
-            <ValidationMessage For="@(() => userAuth.Username)" />
+<div class="d-flex flex-column col-12 vh-100 align-items-center justify-content-center">
+    <h3 class="display-4">Login</h3>
+    
+    <EditForm Model="userAuth" OnValidSubmit="ExecuteLogin" class="container col-4">
+        <div class="card card-body bg-light">
+            <DataAnnotationsValidator />
+            <div class="form-group row m-1">
+                <InputText disabled="@IsDisabled" id="username" placeholder="Username" class="form-control" @bind-Value="userAuth.Username" />
+                <ValidationMessage For="@(() => userAuth.Username)" />
+            </div>
+            <div class="form-group row m-1">
+                <InputText type="password" disabled="@IsDisabled" id="password" placeholder="Password" class="form-control" @bind-Value="userAuth.Password" />
+                <ValidationMessage For="@(() => userAuth.Password)" />
+            </div>
+            <div class="row m-1 mt-2">
+                <button disabled="@IsDisabled" type="submit" class="btn btn-primary">
+                    <div hidden="@(IsDisabled)">Login</div>
+                    <div class="spinner-border spinner-border-sm" role="status" hidden="@(!IsDisabled)"/>
+                    </button>
+            </div>
+            @if (ShowAuthError)
+            {
+                <div class="text-center row m-1 alert alert-danger" role="alert">
+                    <h6>@Error</h6>
+                </div>
+            }
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="password" class="col-md-2 col-form-label">Password:</label>
-        <div class="col-md-10">
-            <InputText type="password" id="password" class="form-control" @bind-Value="userAuth.Password" />
-            <ValidationMessage For="@(() => userAuth.Password)" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-right">
-            <button type="submit" class="btn btn-success">Login</button>
-        </div>
-    </div>
-</EditForm>
-
-@code {
-
-}
+    </EditForm>
+</div>
