--- a/Pages/AdministratorView.razor
+++ b/Pages/AdministratorView.razor
@@ -8,7 +8,37 @@
 
 <AuthorizeView Roles="ADMINISTRATOR">
     <Authorized>
-        <h3>Authorized!</h3>
+        <div class="content text-center">
+            <p class="display-4">Administrator dashboard</p>
+            <div class="container col-12">
+                <div class="row align-items-center justify-content-center m-3">
+                    <div class="card card-body bg-light text-center">
+                        <h4>Users</h4>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Patients</div></a>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Doctors</div></a>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Administrators</div></a>
+                    </div>
+                </div>
+            </div>
+            <div class="container col-12">
+                <div class="row align-items-center justify-content-center m-3">
+                    <div class="card card-body bg-light text-center">
+                        <h4>Medicine</h4>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Medicines</div></a>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Issuers</div></a>
+                        <a class="btn btn-lg btn-outline-primary m-2"><div>Companies</div></a>
+                    </div>
+                </div>
+            </div>
+            <div class="container col-12">
+                <div class="row align-items-center justify-content-center m-3">
+                    <div class="card card-body bg-light text-center">
+                        <h4>Service status</h4>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </Authorized>
     <NotAuthorized>
         <h3>You are not authorized to access this page!</h3>
