--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -3,41 +3,38 @@
 
 <AuthorizeView>
     <Authorized>
-        <div class="top-row ps-3 navbar navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="">ClientWebApp</a>
-                <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </div>
-
-        <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-            <nav class="flex-column">
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="oi oi-home" aria-hidden="true"></span> Home
+        <div class="@NavMenuCssClass h-100" @onclick="ToggleNavMenu">
+            
+            <nav class="navbar p-0 h-100 flex-column">
+                <div class="top-row align-items-center text-center w-100 navbar navbar-dark">
+                    <a class="w-100 pt-3 h-100 navbar-brand mx-auto my-auto" href="">Web App</a>
+                </div>
+                <div>
+                    <div class="nav-item px-3 col-12">
+                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                            <span class="oi oi-home" aria-hidden="true"></span> Home
+                        </NavLink>
+                    </div>
+                    <AuthorizeView Roles="ADMINISTRATOR" Context="AdminView">
+                        <Authorized>
+                            <div class="nav-item px-3 col-12">
+                                <NavLink class="nav-link" href="service_reports">
+                                    <span class="oi oi-question-mark" aria-hidden="true"></span> Service reports
+                                </NavLink>
+                            </div>
+                            <div class="nav-item px-3 col-12">
+                                <NavLink class="nav-link" href="admin_dashboard">
+                                    <span class="oi oi-key" aria-hidden="true"></span> Admin Dashboard
+                                </NavLink>
+                            </div>
+                        </Authorized>
+                    </AuthorizeView>
+                </div>
+                <div class="navbar-text nav-item px-3 col-12 align-self-end">
+                    <NavLink class="nav-link" href="logout">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="counter">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="fetchdata">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                    </NavLink>
-                </div>
-                <AuthorizeView Roles="ADMINISTRATOR" Context="AdminView">
-                    <Authorized>
-                        <div class="nav-item px-3">
-                            <NavLink class="nav-link" href="admin_dashboard">
-                                <span class="oi oi-key" aria-hidden="true"></span> Admin Dashboard
-                            </NavLink>
-                        </div>
-                    </Authorized>
-                </AuthorizeView>
             </nav>
         </div>
     </Authorized>
