--- a/Components/PatientsTable.razor
+++ b/Components/PatientsTable.razor
@@ -1,6 +1,6 @@
 ﻿@using ClientWebApp.DTOs;
-<div class="container">
-    <table class="table col-12">
+<div class="container table-responsive">
+    <table class="table table-hover col-12 align-middle">
         <thead>
             <tr>
                 <th scope="col" class="col-1">#</th>
@@ -21,7 +21,6 @@
                     <td><a href="patient_details" class="btn btn-sm btn-outline-success w-100">Details</a></td>
                 </tr>
             }
-            <tr></tr>
         </tbody>
     </table>
 </div>
