--- a/Components/PatientsTable.razor
+++ b/Components/PatientsTable.razor
@@ -18,7 +18,7 @@
                     <td>@(Patients[i].FirstName + " " + Patients[i].MiddleName.First() + ". " + Patients[i].LastName)</td>
                     <td>@(Patients[i].AssignedDoctor)</td>
                     <td>@(Patients[i].UUID.ToString())</td>
-                    <td><a href="patient_details" class="btn btn-sm btn-outline-success w-100">Details</a></td>
+                    <td><a href="patient_details/@Patients[i].UUID" class="btn btn-sm btn-outline-success w-100">Details</a></td>
                 </tr>
             }
         </tbody>
