--- a/Pages/PatientDetails.razor
+++ b/Pages/PatientDetails.razor
@@ -1,7 +1,140 @@
-﻿<h3>EditPatient</h3>
+﻿@page "/patient_details/{UUID}"
+@using ClientWebApp.DTOs;
+@inject HttpClient Client
 
-@page "/patient_details"
+<div class="d-flex flex-column content text-center justify-content-center align-items-center">
+    <h1 class="display-4 mt-5">Patient details</h1>
+    @if (patient == null)
+    {
+        <SpinnerLoader/>
+    }
+    else
+    {
+        <div class="container mt-5">
+            <div class="row text-center justify-content-center align-items-stretch">
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Name</h5>
+                        <p class="card-text">@(patient.FirstName + " " + patient.MiddleName.First() + ". " + patient.LastName)</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">@(patient.Title == null ? "No title" : patient.Title)</p>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Gender</h5>
+                        @if (patient.Gender == 'M')
+                        {
+                            <div class="bi bi-gender-male" style="font-size: 1.5rem; color: deepskyblue;"/>
+                        }
+                        else if (patient.Gender == 'F')
+                        {
+                            <div class="bi bi-gender-female" style="font-size: 1.5rem; color: hotpink;" />
+                        }
+                        else
+                        {
+                            <div class="bi bi-gender-ambiguous" style="font-size: 1.5rem; color: mediumpurple;" />
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Date of birth</h5>
+                        <p class="card-text">@patient.DateOfBirth</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Social Security Number</h5>
+                        <p class="card-text">@patient.SSN</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Account status</h5>
+                        @if (patient.IsDisabled)
+                        {
+                            <p class="card-text">Disabled</p>
+                        }
+                        else if (!patient.IsDisabled)
+                        {
+                            <p class="card-text">Active</p>
+                        }
+                        else if (patient.IsExpired)
+                        {
+                            <p class="card-text">Expired password!</p>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Password expiry date and time</h5>
+                        <p class="card-text">@patient.PasswordExpiryDate</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Emails</h5>
+                        @foreach (string email in patient.Emails)
+                        {
+                            <p class="card-text"><a class="link-secondary" href="mailto:@(email)"><i class="bi bi-envelope"/> @email</a></p>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Phone numbers</h5>
+                        @foreach (string phoneNumber in patient.PhoneNumbers)
+                        {
+                            <p class="card-text"><a class="link-secondary" href="mailto:@(phoneNumber)"><i class="bi bi-telephone" /> @phoneNumber</a></p>
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Unique identifier</h5>
+                        <p class="card-text">@patient.UUID</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5 mb-5">
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <button class="btn btn-lg btn-warning w-100">
+                        Edit
+                    </button>
+                </div>
+                <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                    <button class="btn btn-lg btn-secondary w-100">
+                        Print
+                    </button>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
 @code {
+    [ParameterAttribute]
+    public string UUID { get; set; }
 
+    public PatientDetailsDTO? patient;
+
+    protected override async Task OnInitializedAsync()
+    {
+        //var result = await Client.GetAsync("api/users/patients/all/basic");
+        patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
+    }
 }
