--- a/Pages/PatientDetails.razor
+++ b/Pages/PatientDetails.razor
@@ -3,25 +3,31 @@
 @inject HttpClient Client
 
 <div class="d-flex flex-column content text-center justify-content-center align-items-center">
-    <h1 class="display-4 mt-5">Patient details</h1>
+    <h1 class="display-4 mt-1">Patient details</h1>
     @if (patient == null)
     {
         <SpinnerLoader/>
     }
     else
     {
-        <div class="container mt-5">
+        <div class="container mt-1">
             <div class="row text-center justify-content-center align-items-stretch">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Name</h5>
-                        <p class="card-text">@(patient.FirstName + " " + patient.MiddleName.First() + ". " + patient.LastName)</p>
+                        <p class="card-text">
+                            <strong>
+                                @(patient.FirstName + " " + patient.MiddleName.First() + ". " + patient.LastName)
+                            </strong>
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Title</h5>
-                        <p class="card-text">@(patient.Title == null ? "No title" : patient.Title)</p>
+                        <p class="card-text"><strong>
+                                @(patient.Title == null ? "No title" : patient.Title)
+                        </strong></p>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-12 mb-md-0 mb-sm-3">
@@ -29,15 +35,15 @@
                         <h5 class="card-title">Gender</h5>
                         @if (patient.Gender == 'M')
                         {
-                            <div class="bi bi-gender-male" style="font-size: 1.5rem; color: deepskyblue;"/>
+                            <div class="bi bi-gender-male" style="font-size: 2rem; color: deepskyblue;" />
                         }
                         else if (patient.Gender == 'F')
                         {
-                            <div class="bi bi-gender-female" style="font-size: 1.5rem; color: hotpink;" />
+                            <div class="bi bi-gender-female" style="font-size: 2rem; color: hotpink;" />
                         }
                         else
                         {
-                            <div class="bi bi-gender-ambiguous" style="font-size: 1.5rem; color: mediumpurple;" />
+                            <div class="bi bi-gender-ambiguous" style="font-size: 2rem; color: mediumpurple;" />
                         }
                     </div>
                 </div>
@@ -46,39 +52,65 @@
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Date of birth</h5>
-                        <p class="card-text">@patient.DateOfBirth</p>
+                        <p class="card-text"><strong>@patient.DateOfBirth</strong></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Social Security Number</h5>
-                        <p class="card-text">@patient.SSN</p>
+                        <p class="card-text"><strong>@patient.SSN</strong></p>
                     </div>
 
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
+                    <div class="card card-body bg-light h-100">
+                        <h5 class="card-title">Assigned doctor</h5>
+                        @if (patient.AssignedDoctor == null)
+                        {
+                            <p class="card-text">
+                                <strong>
+                                    Not yet assigned
+                                </strong>
+                            </p>
+                            <div class="row justify-content-center">
+                                <div class="col-md-4 col-sm-12">
+                                    <button class="btn btn-sm btn-primary w-100">
+                                        View
+                                    </button>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <p class="card-text">
+                                <strong>
+                                    @(patient.AssignedDoctor.FirstName + " " + patient.AssignedDoctor.MiddleName.First() + ". " + patient.AssignedDoctor.LastName)
+                                </strong>
+                            </p>
+                            <div class="row justify-content-center">
+                                <div class="col-md-4 col-sm-12">
+                                    <a href="" class="btn btn-sm btn-primary w-100">
+                                        View
+                                    </a>
+                                </div>
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Account status</h5>
-                        @if (patient.IsDisabled)
-                        {
-                            <p class="card-text">Disabled</p>
-                        }
-                        else if (!patient.IsDisabled)
-                        {
-                            <p class="card-text">Active</p>
-                        }
-                        else if (patient.IsExpired)
-                        {
-                            <p class="card-text">Expired password!</p>
-                        }
+                        <p class="card-text"><strong>@(patient.IsDisabled ? "Disabled" : patient.IsExpired ? "Expired password" : "Active")</strong></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Password expiry date and time</h5>
-                        <p class="card-text">@patient.PasswordExpiryDate</p>
+                        <p class="card-text"><strong>@patient.PasswordExpiryDate</strong></p>
                     </div>
                 </div>
             </div>
@@ -86,18 +118,18 @@
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Emails</h5>
-                        @foreach (string email in patient.Emails)
+                        @foreach (EmailDTO email in patient.Emails)
                         {
-                            <p class="card-text"><a class="link-secondary" href="mailto:@(email)"><i class="bi bi-envelope"/> @email</a></p>
+                            <p class="card-text"><a class="link-secondary" href="mailto:@(email.Email)"><i class="bi bi-envelope"/> @email.Email</a></p>
                         }
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Phone numbers</h5>
-                        @foreach (string phoneNumber in patient.PhoneNumbers)
+                        @foreach (PhoneNumberDTO phoneNumber in patient.PhoneNumbers)
                         {
-                            <p class="card-text"><a class="link-secondary" href="mailto:@(phoneNumber)"><i class="bi bi-telephone" /> @phoneNumber</a></p>
+                            <p class="card-text"><a class="link-secondary" href="mailto:@(phoneNumber.PhoneNumber)"><i class="bi bi-telephone" /> @phoneNumber.PhoneNumber</a></p>
                         }
                     </div>
                 </div>
@@ -106,20 +138,20 @@
                 <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Unique identifier</h5>
-                        <p class="card-text">@patient.UUID</p>
+                        <p class="card-text"><strong>@patient.UUID</strong></p>
                     </div>
                 </div>
             </div>
-            <div class="row mt-5 mb-5">
+            <div class="row mt-3 mb-3">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                    <button class="btn btn-lg btn-warning w-100">
+                    <a href="edit_patient/@(patient.UUID)" class="btn btn-lg btn-warning w-100">
                         Edit
-                    </button>
+                    </a>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                    <button class="btn btn-lg btn-secondary w-100">
+                    <a href="print_patient_details/@(patient.UUID)" class="btn btn-lg btn-secondary w-100">
                         Print
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
