--- a/Pages/EditPatient.razor
+++ b/Pages/EditPatient.razor
@@ -1,4 +1,5 @@
 ﻿@page "/edit_patient/{UUID}"
+@using ClientWebApp.Components
 @using ClientWebApp.DTOs;
 @using System.Text.Json;
 @using System.Text;
@@ -19,117 +20,28 @@
             <DataAnnotationsValidator />
             <div class="row col-12 mb-3">
                 <div class="col-12">
-                    <div class="card card-body bg-light col-12 h-100">
-                        <h4>Name</h4>
-                        <div class="row">
-                            <div class="col col-md-4 col-sm-12">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="first_name" placeholder="First name" @bind-Value="patient.FirstName" />
-                                    <label for="First name">First name</label>
-                                </div>
-                            </div>
-                            <div class="col col-md-2 col-sm-12">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="middle_name" placeholder="Middle name" @bind-Value="patient.MiddleName" />
-                                    <label for="middle_name">Middle name</label>
-                                </div>
-                            </div>
-                            <div class="col col-md-4 col-sm-12">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="last_name" placeholder="Last name" @bind-Value="patient.LastName" />
-                                    <label for="last_name">Last name</label>
-                                </div>
-                            </div>
-                            <div class="col col-md-2 col-sm-12">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="title" placeholder="Title" @bind-Value="patient.Title" />
-                                    <label for="title">Title</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <NameFormCard DisableInput="@DisableInput" @bind-FirstName="@patient.FirstName" @bind-MiddleName="@patient.MiddleName" @bind-LastName="@patient.LastName" @bind-Title="@patient.Title"/>
                 </div>
             </div>
             <div class="row col-12 mb-3">
                 <div class="col-md-6 col-sm-12">
-                    <div class="card card-body bg-light h-100">
-                        <h4>Gender</h4>
-                        <InputRadioGroup disabled="@DisableInput" Name="Gender" @bind-Value="patient.Gender">
-                            <div class="container">
-                                <InputRadio disabled="@DisableInput" class="btn-check" Value="'M'" id="gender-m" />
-                                <label class="btn btn-outline-warning col-md-5 col-sm-2" for="gender-m"><div class="bi bi-gender-male" style="font-size: 2rem; color: deepskyblue;" /></label>
-
-                                <InputRadio disabled="@DisableInput" class="btn-check" Value="'F'" id="gender-f" />
-                                <label class="btn btn-outline-warning col-md-5 col-sm-2" for="gender-f"><div class="bi bi-gender-female" style="font-size: 2rem; color: hotpink;" /></label>
-                            </div>
-                        </InputRadioGroup>
-                    </div>
+                    <GenderFormCard DisableInput="@DisableInput" @bind-Gender="@patient.Gender"/>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <div class="card card-body bg-light h-100">
-                        <h4>Date of birth</h4>
-                        <InputDate disabled="@DisableInput" class="form-control" min="1900-01-01" max="@date.ToString("yyyy-MM-dd")" @bind-Value="patient.DateOfBirth" />
-                    </div>
+                    <DateOfBirthFormCard DisableInput="@DisableInput" @bind-DateOfBirth="@patient.DateOfBirth"/>
                 </div>
             </div>
             <div class="row col-12 mb-3">
                 <div class="col-md-6 col-sm-12">
-                    <div class="card card-body bg-light h-100">
-                        <h4>Emails</h4>
-                        @if(patient.Emails.Count < 1)
-                        {
-                            <SpinnerLoader/>
-                        }
-                        else
-                        {
-                            <div class="mb-1">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="@("email-0")" placeholder="Email" @bind-Value="patient.Emails[0].Email" />
-                                    <label for="@("email-0")">Primary Email</label>
-                                </div>
-                            </div>
-                            <div class="mb-2">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="@("email-1")" placeholder="Email" @bind-Value="patient.Emails[1].Email" />
-                                    <label for="@("email-1")">Secondary Email (optional)</label>
-                                </div>
-                            </div>
-                        }
-                    </div>
+                    <TextInputCard DisableInput="@DisableInput" @bind-TextValue="@patient.Email" Title="Email" Label="Email" Id="email" />
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <div class="card card-body bg-light h-100">
-                        <h4>Phone Numbers</h4>
-                        @if (patient.PhoneNumbers.Count < 1)
-                        {
-                            <SpinnerLoader />
-                        }
-                        else
-                        {
-                            <div class="mb-2">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="@("phoneNumber-0")" placeholder="Phone number" @bind-Value="patient.PhoneNumbers[0].PhoneNumber" />
-                                    <label for="@("phoneNumber-0")">Primary Phone Number</label>
-                                </div>
-                            </div>
-                            <div class="mb-1">
-                                <div class="form-floating">
-                                    <InputText disabled="@DisableInput" class="form-control" id="@("phoneNumber-1")" placeholder="Phone number" @bind-Value="patient.PhoneNumbers[1].PhoneNumber" />
-                                    <label for="@("phoneNumber-1")">Secondary Phone Number (optional)</label>
-                                </div>
-                            </div>
-                        }
-                    </div>
+                    <TextInputCard DisableInput="@DisableInput" @bind-TextValue="@patient.PhoneNumber" Title="Phone Number" Label="Phone Number" Id="phoneNumber"/>
                 </div>
             </div>
             <div class="row col-12 mb-3">
                 <div class="col-md-12 col-sm-12">
-                    <div class="card card-body bg-light h-100">
-                        <div class="form-floating">
-                            <InputText disabled="@DisableInput" class="form-control" id="ssn" placeholder="Social Security Number" @bind-Value="patient.SSN" />
-                            <label for="ssn">Social Security Number</label>
-                        </div>
-                    </div>
+                    <TextInputCard DisableInput="@DisableInput" @bind-TextValue="@patient.SSN" Title="Social Security Number" Label="SSN" Id="ssn" />
                 </div>
             </div>
             <div class="row col-12 mb-3">
@@ -196,10 +108,7 @@
     [ParameterAttribute]
     public string UUID { get; set; }
     public bool DisableInput = false;
-    public PatientDetailsDTO? patient = new();
-    DateTime date = DateTime.Now;
-
-    char Gender;
+    public PatientDetailsDTO? patient;
 
     public async Task Execute()
     {
@@ -229,15 +138,5 @@
     protected override async Task OnInitializedAsync()
     {
         patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
-        
-        if (patient.Emails.Count == 1)
-        {
-            patient.Emails.Add(new EmailDTO { Email = "" });
-        }
-
-        if (patient.PhoneNumbers.Count == 1)
-        {
-            patient.PhoneNumbers.Add(new PhoneNumberDTO { PhoneNumber = "" });
-        }
     }
 }
