--- a/Components/PatientsTable.razor
+++ b/Components/PatientsTable.razor
@@ -1,5 +1,5 @@
 ﻿@using ClientWebApp.DTOs;
-<div class="container table-responsive">
+<div class="card card-body bg-light table-responsive">
     <table class="table table-hover col-12 align-middle">
         <thead>
             <tr>
