--- a/Pages/EditPatient.razor
+++ b/Pages/EditPatient.razor
@@ -32,6 +32,11 @@
                 </div>
             </div>
             <div class="row col-12 mb-3">
+                <div class="col-md-12 col-sm-12">
+                    <TextInputCard DisableInput="@DisableInput" @bind-TextValue="@patient.Username" Title="Username" Label="Username" Id="username" />
+                </div>
+            </div>
+            <div class="row col-12 mb-3">
                 <div class="col-md-6 col-sm-12">
                     <TextInputCard DisableInput="@DisableInput" @bind-TextValue="@patient.Email" Title="Email" Label="Email" Id="email" />
                 </div>
