--- a/Components/PatientsTable.razor
+++ b/Components/PatientsTable.razor
@@ -4,9 +4,10 @@
         <thead>
             <tr>
                 <th scope="col" class="col-1">#</th>
-                <th scope="col" class="col-3">Name</th>
+                <th scope="col" class="col-2">Name</th>
+                <th scope="col" class="col-2">Username</th>
                 <th scope="col" class="col-2">Assigned doctor</th>
-                <th scope="col" class="col-4">UUID</th>
+                <th scope="col" class="col-3">UUID</th>
                 <th scope="col" class="col-1"></th>
             </tr>
         </thead>
@@ -16,7 +17,8 @@
                 <tr>
                     <td>@(i + 1)</td>
                     <td>@(Patients[i].FirstName + " " + Patients[i].MiddleName.First() + ". " + Patients[i].LastName)</td>
-                    <td>@(Patients[i].AssignedDoctor.FirstName + " " + Patients[i].AssignedDoctor.MiddleName.First() + ". " + Patients[i].AssignedDoctor.LastName)</td>
+                    <td>@(Patients[i].Username)</td>
+                    <td>@((Patients[i].AssignedDoctor != null && Patients[i].AssignedDoctor.UUID != Guid.Empty) ? (Patients[i].AssignedDoctor.FirstName + " " + Patients[i].AssignedDoctor.MiddleName.First() + ". " + Patients[i].AssignedDoctor.LastName) : "Not Assigned")</td>
                     <td>@(Patients[i].UUID.ToString())</td>
                     <td><a href="patient_details/@Patients[i].UUID" class="btn btn-sm btn-outline-success w-100">Details</a></td>
                 </tr>
