Add timer to top row nav bar

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -17,6 +17,7 @@
         <AuthorizeView>
             <Authorized>
                 <div class="top-row px-4">
+                    <p class="mt-3"><strong><TimerComponent /></strong></p>
                 </div>
             </Authorized>
         </AuthorizeView>
