--- a/Pages/PatientDetails.razor
+++ b/Pages/PatientDetails.razor
@@ -11,7 +11,7 @@
     else
     {
         <div class="container mt-1">
-            <div class="row text-center justify-content-center align-items-stretch">
+            <div class="row text-center justify-content-center align-items-stretch mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Name</h5>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Date of birth</h5>
@@ -63,7 +63,7 @@
 
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Assigned doctor</h5>
@@ -89,18 +89,21 @@
                                     @(patient.AssignedDoctor != null && patient.AssignedDoctor.UUID != Guid.Empty ? patient.AssignedDoctor.FirstName + " " + patient.AssignedDoctor.MiddleName.First() + ". " + patient.AssignedDoctor.LastName : "Not Assigned")
                                 </strong>
                             </p>
-                            <div class="row justify-content-center">
-                                <div class="col-md-4 col-sm-12">
-                                    <a href="" class="btn btn-sm btn-primary w-100">
-                                        View
-                                    </a>
+                            @if (patient.AssignedDoctor.UUID != Guid.Empty)
+                            {
+                                <div class="row justify-content-center">
+                                    <div class="col-md-4 col-sm-12">
+                                        <a href="" class="btn btn-sm btn-primary w-100">
+                                            View
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
+                            }
                         }
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Username</h5>
@@ -108,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Account status</h5>
@@ -122,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Email</h5>
@@ -138,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mb-4">
                 <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
                     <div class="card card-body bg-light h-100">
                         <h5 class="card-title">Unique identifier</h5>
@@ -146,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-3 mb-3">
+            <div class="row mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                     <a href="edit_patient/@(patient.UUID)" class="btn btn-lg btn-warning w-100">
                         Edit
