--- a/Pages/Patients.razor
+++ b/Pages/Patients.razor
@@ -29,7 +29,7 @@
             </div>
             <div class="row col-12 mb-3">
                 <div class="col-12">
-                    <UserTable Entity="patients.items"/>
+                    <UserTable Entity="patients.items" Link="patient_details"/>
                 </div>
             </div>
             <div class="row col-12 mb-3 justify-content-center">
